# DeePRAC_project

./: .gitignore  LICENSE  README.md
PlugInSlicer/: Instructions_for_installing.txt
PlugInSlicer/MySlicerExtension/KiTS/: CMakeLists.txt
PlugInSlicer/MySlicerExtension/KiTS/KiTSegmentationForCT/: CMakeLists.txt  Dockerfile  KiTSegmentationForCT.py
PlugInSlicer/MySlicerExtension/KiTS/KiTSegmentationForCT/KiTS_build/: Networks.py  main_necker.py  requirements.txt
PlugInSlicer/MySlicerExtension/KiTS/KiTSegmentationForCT/KiTS_build/models/: Dataset.py
PlugInSlicer/MySlicerExtension/KiTS/KiTSegmentationForCT/KiTS_build/utils/: __init__.py  autocrop.py  cropping.py  patches.py  pre_post_adults.py  pre_post_children.py  pre_processing.py
UNIT/: Train.sh  data.py  test_batch.py  train.py  trainer.py  utils.py
UNIT/configs/: munit_contrast2noncontrast_folder.yaml  unit_contrast2noncontrast_folder.yaml  unit_contrast2noncontrast_folder_v2.yaml  unit_contrast2noncontrast_folder_v3.yaml  unit_contrast2noncontrast_folder_v4.yaml  unit_contrast2noncontrast_folder_w.yaml
acgan/: Test.sh  Train.sh  TransformParameters.0.txt  main.py  model_wsgan3.py  prova_elastix.py  templeatedataset.py  test_new.py  utils.py
acgan/arch/: discriminators.py  generators.py  ops.py
myU-Net/: Dataset.py  Dice_for_original_nnunet.py  Find_k_ddt.py  Prepare_as_nnunet.py  Train_and_Test.py  __init__.py  main.py  patch_division.py
myU-Net/Networks/: DVAE.py  Modified_VGG16.py  PNet3D.py  REDCNN.py  ResNet3D.py  STN.py  (+9 more)
ssbr/: fastai.py.txt  fastai_function.py  ssbr-test.py  ssbr-train.py
(+48 files in other folders)
